# hiring-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agentmail_sales_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
